# chatoperator

./: .env copy.example  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
PRPs/: hybrid-chatbot-orchestration-system.md
docs/: requiremients.md
scripts/: analyze_platform.py  archive_conversations.py  import_session.py  run_operator.py  validate_config.py
src/config/: settings.py
src/models/: conversation.py  platform_config.py  selector.py
src/module1_analyzer/: analyzer.py  cache_writer.py  dom_extractor.py  gemini_client.py  screenshot_capturer.py  selector_generator.py
src/module2_operator/: authenticator.py  cache_loader.py  chatbot_interface.py  conversation_reader.py  message_sender.py  operator.py  polling_loop.py  round_robin.py
src/module3_archiver/: __init__.py  archiver.py  conversation_downloader.py  markdown_exporter.py  media_downloader.py  profile_extractor.py
src/selenium_utils/: driver_factory.py  element_helpers.py  wait_helpers.py
src/utils/: exceptions.py  logger.py  session_manager.py
tests/: conftest.py
tests/test_models/: test_platform_config.py
